--- a/_config.yml
+++ b/_config.yml
@@ -13,12 +13,12 @@
 # you will see them accessed via {{ site.title }}, {{ site.github_repo }}, and so on.
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
-title: Just the Class
-tagline: A Jekyll template for course websites
-description: A modern, highly customizable, responsive Jekyll template for course websites
-author: Kevin Lin
-baseurl: '/just-the-class' # the subpath of your site, e.g. /blog
-url: 'https://kevinl.info' # the base hostname & protocol for your site, e.g. http://example.com
+title: Pi Star Lab Reading Group
+tagline: Paper Discussions
+# description: Paper Discussions
+author: Pi Star Lab
+# baseurl: '/just-the-class' # the subpath of your site, e.g. /blog
+# url: 'https://people.engr.tamu.edu/guni/pistar/index.html' # the base hostname & protocol for your site, e.g. http://example.com
 exclude: ["Gemfile", "Gemfile.lock", "LICENSE", "README.md"]
 
 # Theme settings
@@ -28,10 +28,10 @@ search_enabled: true
 heading_anchors: true
 permalink: pretty
 aux_links:
-  Kevin Lin:
-    - 'https://kevinl.info'
-  Just the Class on GitHub:
-    - 'https://github.com/kevinlin1/just-the-class'
+  Pi Star Lab:
+    - 'https://people.engr.tamu.edu/guni/pistar/index.html'
+  Pi Star Lab on GitHub:
+    - 'https://github.com/Pi-Star-Lab/pi-star-reading-group'
 footer_content:
 
 # Collections for website data
